--- a/用例编写说明.md
+++ b/用例编写说明.md
@@ -2,31 +2,31 @@
 
 ## `Instruction`
 
-字段                   | 类型                 | 默认值 | 说明
------------------------|--------------------  |--------|-------
-tell                   | `String`             |        | 指定请求目标(不指定则不请求), 如a、localhost:8080、127`.0.0.1:8550/proxy/a 
-by                     | `String`             | http   | 指定协议, 支持`http`、`dubbo`、`grpc`` 
-to                     | `Instruction`        |        | 指定要发给目标的指令, 结构与Instruction相同, 相当于递归
-withHeaders            | `Map<String,String>` |        | 指定http请求添加的请求头
-withQueries            | `Map<String,String>` |        | 指定http请求添加的query string 
-thenCallTestMethod     | `Integer`            |        | 完成请求后调用随机测试方法, 数字表示方法名的范围, 最大为100, 即随机调`用方法0-方法99当中的一个 
-thenOKTurnByRoundRobin | `Integer`            | 1      | 轮询, 重复多少次给一次正常结果 
-thenDelay              | `double`             |        | 指定额外时延, 单位秒
-thenThrowByPercent     | `Integer`            |        | 指定抛出异常的概率, 百分数
-thenReturn             | `String`             |        | 指定返回内容格式
-forTimes               | `int`                | 1      | 指定当前指令重复执行次数
-collectBy              | `String`             | string | 重复执行指令(forTimes>1)时, 结果展现形式, 支持`string`、`list`
+字段           | 类型                 | 默认值 | 说明
+---------------|--------------------  |--------|-------
+call           | `String`             |        | 指定请求目标(不指定则不请求), 如a、localhost:8080、127`.0.0.1:8550/proxy/a 
+by             | `String`             | http   | 指定协议, 支持`http`、`dubbo`、`grpc`` 
+to             | `Instruction`        |        | 指定要发给目标的指令, 结构与Instruction相同, 相当于递归
+headers        | `Map<String,String>` |        | 指定http请求添加的请求头
+queries        | `Map<String,String>` |        | 指定http请求添加的query string 
+callTestMethod | `Integer`            |        | 完成请求后调用随机测试方法, 数字表示方法名的范围, 最大为100, 即随机调`用方法0-方法99当中的一个 
+okByRoundRobin | `Integer`            | 1      | 轮询, 重复多少次给一次正常结果 
+delay          | `double`             |        | 指定额外时延, 单位秒
+errorByPercent | `Integer`            |        | 指定抛出异常的概率, 百分数
+responseFmt    | `String`             |        | 指定返回内容格式
+times          | `int`                | 1      | 指定当前指令重复执行次数
+collectBy      | `String`             | string | 重复执行指令(times>1)时, 结果展现形式, 支持`string`、`list`
 
 ### 例子
 ```yaml
-tell: <a>
+call: <a>
 to:
-  tell: <c>
+  call: <c>
   to:
-    thenDelay: 0.5
-    thenReturn: "{{env(VERSION)}}"
-  thenDelay: 0.5
-  thenReturn: "{{env(VERSION)}} -> {{resultBody()}}"
+    delay: 0.5
+    responseFmt: "{{env(VERSION)}}"
+  delay: 0.5
+  responseFmt: "{{env(VERSION)}} -> {{resultBody()}}"
 ```
 
 ```
@@ -55,10 +55,10 @@ cases
 ```yaml
 traceNodeTmpl: "{{env(VERSION)}}"
 trace:
-- tell: <a>
-  thenDelay: 0.5
-- tell: <c>
-  thenDelay: 0.5
+- call: <a>
+  delay: 0.5
+- call: <c>
+  delay: 0.5
 ```
 
-trace的类型为`List<Instruction>`, 其中的每一个表示调用链中的一环, `to`、`thenReturn`两个字段会被忽略
+trace的类型为`List<Instruction>`, 其中的每一个表示调用链中的一环, `to`、`responseFmt`两个字段会被忽略
